--- a/contact_new.html
+++ b/contact_new.html
@@ -349,7 +349,7 @@
               <!-- Honeypot field to prevent spam -->
               <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
               
-              <button type="submit" class="w-full px-4 py-2 rounded-full font-medium bg-green-700 text-white hover:bg-green-600">
+              <button type="submit" class="w-full px-4 py-2 rounded-full font-medium bg-gradient-to-r from-teal-500 to-green-500 text-white hover:bg-green-600 transition-transform hover:scale-105 duration-300">
                 <i data-lucide="send" class="h-4 w-4 mr-2 inline"></i>
                 Send Message
               </button>
@@ -432,7 +432,7 @@
               <a 
                 href="https://maps.app.goo.gl/p9wGeDKkrsmYuVv47" 
                 target="_blank" 
-                class="px-6 py-3 rounded-full font-medium bg-green-700 text-white hover:bg-green-600 hover:scale-105 transition-all duration-300 inline-flex items-center shadow-md hover:shadow-lg cursor-pointer"
+                class="px-6 py-3 rounded-full font-medium bg-gradient-to-r from-teal-500 to-green-500 text-white hover:bg-green-600 hover:scale-105 transition-all duration-300 inline-flex items-center shadow-md hover:shadow-lg cursor-pointer"
                 rel="noopener noreferrer"
                 aria-label="Get directions to Al Omar Hajj and Umrah Service on Google Maps"
               >
