--- a/packages.html
+++ b/packages.html
@@ -532,7 +532,7 @@
                 Whether you need special accommodations, have specific dietary requirements, or want to extend your stay, our team can design a package that's perfect for you.
               </p>
               <a href="contact_new.html" class="inline-block">
-                <button class="bg-green-600 hover:bg-green-700 text-white px-8 py-3 rounded-full font-medium transition-transform hover:scale-105 duration-300 flex items-center">
+                <button class="bg-gradient-to-r from-teal-500 to-green-500 hover:bg-green-700 text-white px-8 py-3 rounded-full font-medium transition-transform hover:scale-105 duration-300 flex items-center">
                   Contact Us for a Custom Package
                   <i class="bx bx-right-arrow-alt ml-2 h-5 w-5 inline-flex items-center align-middle -mt-05"></i>
                 </button>
