--- a/index.html
+++ b/index.html
@@ -1550,7 +1550,7 @@
             <h3 class="text-2xl font-bold text-gray-900 mb-6">Send us a Message</h3>
             
             <!-- Success Message (hidden by default) -->
-            <div id="contactSuccessMessage" class="hidden bg-green-50 border border-green-200 rounded-lg p-6 text-center mb-6">
+            <div id="successMessage" class="hidden bg-green-50 border border-green-200 rounded-lg p-6 text-center">
               <div class="w-16 h-16 bg-green-100 rounded-full mx-auto flex items-center justify-center mb-4">
                 <svg class="h-8 w-8 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
@@ -1559,8 +1559,8 @@
               <h3 class="text-xl font-semibold text-green-700 mb-2">Message Sent Successfully!</h3>
               <p class="text-gray-600 mb-4">Thank you for contacting us. Our team will get back to you shortly.</p>
               <button 
-                class="px-4 py-2 rounded-md font-medium bg-green-600 text-white hover:bg-green-700"
-                onclick="document.getElementById('contactForm').classList.remove('hidden'); document.getElementById('contactSuccessMessage').classList.add('hidden');"
+                class="px-4 py-2 rounded-md font-medium bg-green-700 text-white hover:bg-green-600"
+                onclick="document.getElementById('contactForm').classList.remove('hidden'); document.getElementById('successMessage').classList.add('hidden');"
               >
                 Send Another Message
               </button>
