added images and given discriptive text

--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
   <div id="offerPopup" class="popup-overlay">
     <div class="popup-content shadow-xl">
       <div class="popup-header">
-        <h3 class="text-xl font-bold text-center">Latest Offers & Updates</h3>
+        <h3 class="text-xl font-bold text-center ">Latest Offers & Updates</h3>
         <span class="popup-close" id="popupClose">&times;</span>
       </div>
       <div class="popup-body">
@@ -753,9 +753,9 @@
                            
                             <h3 class="text-xl font-bold text-gray-900 mx-auto text-center">Complete Hajj Guide</h3>
                         </div>
-                        <p class="text-gray-700">A detailed overview of the rituals, preparations, and essential steps to perform Hajj, ensuring a smooth and spiritually rewarding pilgrimage.</p>
+                        <p class="text-gray-900">A detailed overview of the rituals, preparations, and essential steps to perform Hajj, ensuring a smooth and spiritually rewarding pilgrimage.</p>
                       <a href="servicecard1.html" class="text-green-600 hover:text-green-700 font-medium flex items-center mt-3">
-                        Learn More
+                        Complete Hajj Guide
                        <i class="bx bx-right-arrow-alt ml-1"></i>
                      </a>
                     </div>
@@ -770,9 +770,9 @@
                         <div class="flex items-center mb-4">
                             <h3 class="text-xl font-bold text-gray-900 mx-auto text-center ">Umrah Services</h3>
                         </div>
-                        <p class="text-gray-700">Step-by-step instructions and tips for performing Umrah, including Ihram, Tawaf, Sa’i, and other important rites for a meaningful visit.</p>
+                        <p class="text-gray-900">Step-by-step instructions and tips for performing Umrah, including Ihram, Tawaf, Sa’i, and other important rites for a meaningful visit.</p>
                     <a href="servicecard2.html" class="text-green-600 hover:text-green-700 font-medium flex items-center mt-3">
-                        Learn More
+                        Umrah Services
                        <i class="bx bx-right-arrow-alt ml-1"></i>
                      </a>
                       </div>
@@ -787,9 +787,9 @@
                         <div class="flex items-center mb-4 ">
                             <h3 class="text-xl font-bold text-gray-900 mx-auto text-center ">Makkah Ziyarah</h3>
                         </div>
-                        <p class="text-gray-700">Insights into visiting the sacred sites in Makkah, including the Kaaba, Masjid al-Haram, and other religious landmarks.</p>
+                        <p class="text-gray-900">Insights into visiting the sacred sites in Makkah, including the Kaaba,  Masjid Al-Mukarramah Ziyarah, and other religious sites in Makkah, Saudi Arabia.</p>
                         <a href="servicecard3.html" class="text-green-600 hover:text-green-700 font-medium flex items-center mt-3">
-                        Learn More
+                        Makkah Ziyarah
                        <i class="bx bx-right-arrow-alt ml-1"></i>
                      </a>
                       </div>
@@ -881,7 +881,7 @@
           <!--About us image moved here-->
           <div class="rounded-xl overflow-hidden shadow-2xl">
             <img 
-              src="https://pub-cdn.sider.ai/u/U07GHKZOVKY/web-coder/684ca5920484c40371c95bdf/resource/9073f8de-0f10-47e6-9ad6-8a5fe954db61.jpg" 
+              src="images/our story.jpg" 
               alt="Masjid-e-Nabawi" 
               class="w-full h-[500px] object-cover"
             />
