--- a/Services.html
+++ b/Services.html
@@ -297,7 +297,7 @@
                         <div class="flex items-center mb-4 ">
                             <h3 class="text-xl font-bold text-gray-900 mx-auto text-center ">Makkah Ziyarah</h3>
                         </div>
-                        <p class="text-gray-700">Insights into visiting the sacred sites in Makkah, including the Kaaba, Masjid al-Haram, and other religious landmarks.</p>
+                        <p class="text-gray-700">Insights into visiting the sacred sites in Makkah, including the Kaaba, Masjid Al-Mukarramah Ziyarah, and other religious sites in Makkah, Saudi Arabia.</p>
                         <a href="servicecard3.html" class="text-green-600 hover:text-green-700 font-medium flex items-center mt-3">
                         Learn More
                        <i class="bx bx-right-arrow-alt ml-1"></i>
