--- a/index.html
+++ b/index.html
@@ -1080,7 +1080,7 @@
          
 
         <!-- Umrah Packages (hidden by default) -->
-        <div id="umrah-packages" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 ">
+        <div id="umrah-packages" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 hidden ">
           <!-- Package Card 1 -->
           <div class="bg-white rounded-lg shadow-md overflow-hidden border border-gray-200 package-card">
             <div class="p-6">
