updated in image section
In Image section, the first gallery section the word "class " is modified/erased while coding

--- a/index.html
+++ b/index.html
@@ -1218,7 +1218,7 @@
         
         <div class="grid grid-cols-2 md:grid-cols-3 gap-4">
           <div class="rounded-lg overflow-hidden cursor-pointer gallery-item">
-            <img src="images/gallery1.jpg" alt="Masjid Nabawi" cla="w-full h-64 object-cover hover:scale-105 transition-transform duration-300 transform-gpu" loading="lazy" />
+            <img src="images/gallery1.jpg" alt="Masjid Nabawi" class="w-full h-64 object-cover hover:scale-105 transition-transform duration-300 transform-gpu" loading="lazy" />
           </div>
           <div class="rounded-lg overflow-hidden cursor-pointer gallery-item">
             <img src="images/gallery2.jpg" alt="Mecca" class="w-full h-64 object-cover hover:scale-105 transition-transform duration-300 transform-gpu" loading="lazy" />
