added popup header bg and modified package section

--- a/packages.html
+++ b/packages.html
@@ -428,9 +428,9 @@
                    <div class="bg-green-100  w-12 h-12 rounded-full mr-4 group-hover:bg-emerald-500 transition-colors duration-300 flex items-center justify-center">
                     <i class="bx bx-bowl-hot text-green-500  text-3xl  group-hover:text-white transition-colors duration-300   "></i>
               </div>
-              <h3 class="text-lg font-semibold text-gray-900 group-hover:text-white transition-colors duration-300">Meals</h3>
+              <h3 class="text-lg font-semibold text-gray-900 group-hover:text-white transition-colors duration-300">Best South Indian food </h3>
             </div>
-            <p class="text-gray-700 group-hover:text-white transition-colors duration-300">Quality halal meals with options varying by package level, from basic to premium dining experiences.</p>
+            <p class="text-gray-700 group-hover:text-white transition-colors duration-300">Healthy, tasty, and truly South Indian Food and Beverages are provided in every package level.</p>
           </div>
 
           <!-- Support Services -->
