--- a/servicecard9.html
+++ b/servicecard9.html
@@ -289,7 +289,7 @@
      <section class="relative  pt-28 pb-20 bg-green-700">
       <div class="absolute inset-0 z-0 opacity-20 ">
         <img
-          src="images/Badr bg.jpg"
+          src="images/Badr bg.webp"
           alt="service card background"
           class="w-full h-full object-cover"
         />
